--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -11,6 +11,7 @@
     <app-root>
     </app-root>
   </body>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="/static/assets/js/jquery-3.1.0.min.js"></script>
+<script type="text/javascript" src="/static/assets/js/bootstrap.min.js"></script>
 
 </html>
